Fix Bug 328962 - menu entry 'mark all read' disabled

FIXED-IN: 4.12.1
BUG: 328962